# gfg-barnacle

./: README.md
11/: TESTING.md
12/: QUICKSTART.md  SECURITY.md
13/: SUMMARY.md
14/: README.md
18/: BUG_EXPLANATION.md  README.md
19/: TECHNICAL.md
20/: QUICKSTART.md
Module 11/: BUG_FLOW.md  QUICKSTART.md  README.md  app.js  index.html  manifest.json  service-worker.js  styles.css
Module 12/: .gitignore  Cargo.toml  INDEX.md  README.md  build.sh  demo.html  integration-example.jsx  package.json
Module 12/src/: lib.rs
Module 13/: BUG_DIAGRAM.md  Cargo.toml  README.md  TECHNICAL.md
Module 13/examples/: stress_test.rs  webapp_demo.rs
Module 13/src/: lib.rs
Module 14/: Cargo.toml  README.md  SOLUTION.md  test_bug.sh
Module 14/src/: auth_middleware.rs  auth_state.rs  handlers.rs  main.rs
Module 15/: .gitignore  Cargo.toml  README.md
Module 15/src/: main.rs
Module 16/: .gitignore  Cargo.toml  INDEX.md  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  build.sh  demo.html  integration-example.jsx  package.json
Module 16/src/: lib.rs
Module 17/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  SOLUTION.md  TECHNICAL.md  build.sh  demo.html  integration-example.js
Module 17/src/: lib.rs
Module 18/: .gitignore  Cargo.toml  INDEX.md  QUICKSTART.md  README.md  SECURITY.md  TECHNICAL.md  build.sh  demo.html  index.html  integration-example.jsx  package.json
Module 18/src/: lib.rs
Module 19/: .gitignore  CHALLENGE.md  Cargo.toml  QUICKSTART.md  README.md  demo.html  integration-example.js
Module 19/src/: lib.rs
Module 20/: .gitignore  BUG_SUMMARY.md  Cargo.toml  README.md  TECHNICAL.md  integration-example.rs
Module 20/src/: lib.rs
