[package]
name = "hydration-mismatch-module"
version = "0.1.0"
edition = "2021"
authors = ["GFG Barnacle Team"]
description = "A buggy module demonstrating hydration mismatch in SSR applications"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
js-sys = "0.3"
chrono = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
]

[profile.release]
opt-level = "z"
lto = true
