[package]
name = "auth-guard-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
lazy_static = "1.4"
futures-util = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
