[package]
name = "multi-step-form-state-fragmentation"
version = "0.1.0"
edition = "2021"
authors = ["GFG Barnacle Team"]
description = "A buggy module demonstrating state fragmentation in multi-step forms"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
]

[profile.release]
opt-level = "z"
lto = true
