[package]
name = "shadowed-canvas-context"
version = "0.1.0"
edition = "2021"
authors = ["GFG Barnacle Team"]
description = "A buggy WebGL image processing module with state caching issues"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "WebGlActiveInfo",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "ImageData",
    "CanvasRenderingContext2d",
    "Document",
    "Window",
    "Element",
]

[profile.release]
opt-level = "z"
lto = true
