[package]
name = "reentrancy-deadlock-module"
version = "0.1.0"
edition = "2021"
authors = ["GFG Barnacle Team"]
description = "A buggy module demonstrating re-entrancy deadlock in JS-to-Rust-to-JS callbacks"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
]

[profile.release]
opt-level = "z"
lto = true
