[package]
name = "waker-bug-module"
version = "0.1.0"
edition = "2021"
authors = ["GFG Barnacle Team"]
description = "A buggy module demonstrating missing Waker in custom Future implementation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["Window"]

[profile.release]
opt-level = "z"
lto = true
